customized color and design.

--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -45,6 +45,9 @@ input, textarea {
     resize: none;
     color: var(--color-white);
 }
+input::placeholder, textarea::placeholder {
+    color: var(--color-light);
+}
 
 @media screen and (max-width: 1024px) {
     .container.contact__container {
