--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -26,6 +26,7 @@ header {
     position: absolute;
     left: 0;
     bottom: 3rem;
+    font-size: 1.5rem;
 }
 
 .header__socials::after {
@@ -42,8 +43,8 @@ header {
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
-    margin-top: 4rem;
-    border-radius: 12rem 12rem 0 0;
+    margin-top: 2rem;
+    border-radius: 4rem;
     overflow: hidden;
     padding: 5rem 1.5rem 1.5rem 1.5rem;
 }
@@ -53,8 +54,8 @@ header {
     right: -2.3rem;
     bottom: 5rem;
     transform: rotate(90deg);
-    font-weight: 300;
-    font-size: 0.9rem;
+    font-weight: 500;
+    font-size: 1.2rem;
 }
 
 /* MEDIA QUERIES (SMALL DEVICES LIKE SMART PHONES) */
