--- a/src/components/services/services.css
+++ b/src/components/services/services.css
@@ -6,7 +6,7 @@
 
 .service {
     background: var(--color-bg-variant);
-    border-radius: 0 0 2rem 2rem;
+    border-radius: 2rem 2rem 2rem 2rem;
     border: 1px solid var(--color-primary);
     height: fit-content;
     transition: var(--transition);
@@ -20,13 +20,21 @@
 .service__header {
     background: var(--color-primary);
     padding: 2rem;
-    border-radius: 0 0 2rem 2rem;
+    border-radius: 2rem 2rem 0 0;
     box-shadow: 0 2rem 1rem rgba(0, 0, 0, 0.1);
+    display: flex;
+    gap: 0.5rem;
+    justify-content: center;
+    align-items: center;
 }
 .service__header h3 {
     color: var(--color-bg);
     font-size: 1rem;
     text-align: center;
+}
+.service__header-icon {
+    color: var(--color-bg);
+    font-size: 1.8rem;
 }
 
 .service__list {
