--- a/src/index.css
+++ b/src/index.css
@@ -10,14 +10,13 @@
 }
 
 :root {
-    --color-bg: #1f1f38;
-    --color-bg-dark: #121224;
-    --color-bg-variant: #2c2c6c;
-    --color-primary: #4dbcff;
-    --color-primary-variant: rgba(77, 181, 255, 0.4);
+    --color-bg: #2f95a0;
+    --color-bg-dark: #4D774E;
+    --color-bg-variant: #702a62;
+    --color-primary: #d9d9d9;
+    --color-primary-variant: #702a62;
     --color-white: #fff;
     --color-light: rgba(255, 255, 255, 0.6);
-
     --transition: all 400ms ease;
 
     --container-width-lg: 75%;
