--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -5,7 +5,7 @@
 }
 
 .portfolio__item {
-    background: var(--color-bg-variant);
+    background: var(--color-bg);
     padding: 1.2rem;
     border-radius: 2rem;
     border: 1px solid transparent;
@@ -17,7 +17,7 @@
 }
 
 .portfolio__item-image {
-    border-radius: 1.5rem;
+    border-radius: 1rem;
     overflow: hidden;
 }
 
@@ -30,6 +30,7 @@
     gap: 1rem;
     margin-bottom: 1rem;
 }
+
 
 @media screen and (max-width: 600px) {
     .portfolio__container {
