--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,6 +1,5 @@
 header {
-    height: 150vh;
-    padding-top: 4rem;
+    height: 60vh;
     overflow: hidden; 
 }
 
@@ -8,7 +7,10 @@ header {
     text-align: center;
     height: 100%;
     position: relative;
-    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .cta {
@@ -25,7 +27,7 @@ header {
     gap: 0.8rem;
     position: absolute;
     left: 0;
-    bottom: 3rem;
+    
     font-size: 1.5rem;
 }
 
@@ -52,7 +54,6 @@ header {
 .scroll__down {
     position: absolute;
     right: -2.3rem;
-    bottom: 5rem;
     transform: rotate(90deg);
     font-weight: 500;
     font-size: 1.2rem;
@@ -60,9 +61,6 @@ header {
 
 /* MEDIA QUERIES (SMALL DEVICES LIKE SMART PHONES) */
 @media screen and (max-width: 600px) {
-    header {
-       height: 100vh;
-    }
     .header__socials, 
     .scroll__down {
        display: none;
